--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,7 +20,7 @@ h3{
 
 header {
   font-family: 'Playfair Display SC', serif;
-  padding: 1rem;
+  padding: 0.5rem;
   background: linear-gradient(to right,black, #D99E37);
   position: fixed;
   width: 100%;
@@ -57,6 +57,18 @@ form>button:hover {
   color: white;
 }
 
+.restaurant-page, button{
+  margin-left: 10px;
+  -webkit-transition-duration: 0.4s; 
+  transition-duration: 0.4s;
+}
+
+.restaurant-page, button:hover{
+  color: white;
+}
+
+
+
 
 .login-container {
   display: flex;
@@ -81,11 +93,13 @@ html {
   margin: 8rem 10rem;
 }
 
+
 .restaurant-info {
   cursor: pointer;
 }
 
 .restaurant-page, p {
+ font-family: 'Playfair Display SC', serif;
  color: white;
  margin-left: 50px;
 }
