--- a/client/src/App.css
+++ b/client/src/App.css
@@ -206,6 +206,17 @@ footer{
   color:white;
 }
 
+.logo{
+  margin-top: 50px;
+}
+
+.logo__image{
+  width: 30%;
+  border-radius: 50%;
+}
+
+
+
 
 
 
